# nuitrcs_compiling_applications

./: README
part3/: README  configure.ac
part3/src/: Makefile.am  matrix_gsl.c
